--- a/netlify.toml
+++ b/netlify.toml
@@ -3,15 +3,13 @@
   publish = "dist"
   functions = "netlify/functions"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-[build.environment]
-  NODE_VERSION = "20"
+  # Node.js version used in build process
+  [build.environment]
+    NODE_VERSION = "20"
+    IGNORE_ENV_FILE_WARNINGS = "true"
 
 [functions]
+  # Use esbuild for bundling serverless functions
   node_bundler = "esbuild"
   external_node_modules = ["firebase-admin"]
 
@@ -26,10 +24,11 @@
   to = "/.netlify/functions/:splat"
   status = 200
   force = true
-  
-  [build.environment]
-IGNORE_ENV_FILE_WARNINGS = "true"
 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [[headers]]
   for = "/*"
@@ -38,4 +37,10 @@ IGNORE_ENV_FILE_WARNINGS = "true"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self' https://api.pinterest.com https://*.pinterest.com; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: http:; font-src 'self' data:; connect-src 'self' https://api.pinterest.com https://*.pinterest.com https://*.firebaseio.com https://*.googleapis.com;"
+    Content-Security-Policy = """
+      default-src 'self' https://api.pinterest.com https://*.pinterest.com;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval';
+      style-src 'self' 'unsafe-inline';
+      img-src 'self' data: https: http:;
+      font-src 'self' data:;
+      con
