--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,11 @@
   publish = "dist"
   functions = "netlify/functions"
 
-  # Node.js version used in the build process
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+    # Node.js version used in the build process
   [build.environment]
     NODE_VERSION = "20"
     IGNORE_ENV_FILE_WARNINGS = "true"
@@ -11,8 +15,10 @@
     SECRETS_SCAN_OMIT_PATHS = "dist/assets/index-B-T7gGJm.js"
     SECRETS_SCAN_OMIT_KEYS = "PINTEREST_CLIENT_SECRET"
 
+[build.environment]
+  NODE_VERSION = "20"
+
 [functions]
-  # Use esbuild for bundling serverless functions
   node_bundler = "esbuild"
   external_node_modules = ["firebase-admin"]
 
@@ -28,11 +34,6 @@
   status = 200
   force = true
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
 [[headers]]
   for = "/*"
   [headers.values]
@@ -40,10 +41,18 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = """default-src 'self' https://api.pinterest.com https://*.pinterest.com;
-      script-src 'self' 'unsafe-inline' 'unsafe-eval';
+    Content-Security-Policy = """
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.firebaseio.com https://*.firebase.com;
       style-src 'self' 'unsafe-inline';
       img-src 'self' data: https: http:;
       font-src 'self' data:;
-      connect-src 'self' https://api.pinterest.com https://*.pinterest.com https://*.firebaseio.com https://*.googleapis.com;
+      connect-src 'self' 
+        https://api.pinterest.com 
+        https://*.pinterest.com 
+        https://*.firebaseio.com 
+        https://*.firebase.com 
+        https://*.googleapis.com 
+        wss://*.firebaseio.com;
+      frame-src 'self' https://*.firebaseio.com https://*.firebase.com;
     """
