--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,13 @@
   publish = "dist"
   functions = "netlify/functions"
 
-  [build.environment]
-    NODE_VERSION = "20"
-    IGNORE_ENV_FILE_WARNINGS = "true"
-    SECRETS_SCAN_OMIT_PATHS = "dist/assets/index-B-T7gGJm.js"
-    SECRETS_SCAN_OMIT_KEYS = "PINTEREST_CLIENT_SECRET"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[build.environment]
+  NODE_VERSION = "20"
 
 [functions]
   node_bundler = "esbuild"
@@ -18,11 +20,6 @@
   publish = "dist"
   port = 8888
   targetPort = 5173
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
 
 [[redirects]]
   from = "/.netlify/functions/*"
@@ -43,12 +40,15 @@
       style-src 'self' 'unsafe-inline';
       img-src 'self' data: https: http:;
       font-src 'self' data:;
-      connect-src 'self'
-        https://api.pinterest.com
-        https://*.pinterest.com
-        https://*.firebaseio.com
-        https://*.firebase.com
-        https://*.googleapis.com
+      connect-src 'self' 
+        https://api.pinterest.com 
+        https://*.pinterest.com 
+        https://*.firebaseio.com 
+        https://*.firebase.com 
+        https://*.googleapis.com 
         wss://*.firebaseio.com;
       frame-src 'self' https://*.firebaseio.com https://*.firebase.com;
+      worker-src 'self';
+      child-src 'self';
+      object-src 'none';
     """
