--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,12 @@
   publish = "dist"
   functions = "netlify/functions"
 
+  [build.environment]
+    NODE_VERSION = "20"
+    IGNORE_ENV_FILE_WARNINGS = "true"
+    SECRETS_SCAN_OMIT_PATHS = "dist/assets/index-B-T7gGJm.js"
+    SECRETS_SCAN_OMIT_KEYS = "PINTEREST_CLIENT_SECRET"
+    
 [[redirects]]
   from = "/*"
   to = "/index.html"
